--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-status
 {
   "name": "food",
   "version": "1.0.0",
-  "description": "shop",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
